tests/common/snapshots/e2e_tests__common__visual_testing__Large File Typing__after_second_typing.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 fresh-test-BIG.txt*                                                            
     25 │ @00001920: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx █
          xxxxxxxxxxx                                                          │
     27 │ @00002000: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     29 │ @00002080: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     31 │ @00002160: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     33 │ @00002240: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     35 │ @00002320: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     37 │ @0000WORLD2400: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxxxxxxx                                                     │
     39 │ @00002480: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     41 │ @00002560: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     43 │ @00002640: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     45 │ @00002720: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
/tmp/fresh-test-BIG.txt [+] | Ln 30, Col 10 | Opened /tmp/fres...  Help: Ctrl+/
