tests/common/snapshots/e2e_tests__common__visual_testing__Large File Typing__before_typing.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 fresh-test-BIG.txt                                                             
      1 │ @00000000: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx █
          xxxxxxxxxxx                                                          │
      3 │ @00000080: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
      5 │ @00000160: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
      7 │ @00000240: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
      9 │ @00000320: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     11 │ @00000400: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     13 │ @00000480: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     15 │ @00000560: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     17 │ @00000640: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     19 │ @00000720: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
          xxxxxxxxxxx                                                          │
     21 │ @00000800: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
/tmp/fresh-test-BIG.txt | Ln 10, Col 0 | Opened /tmp/fresh-tes...  Help: Ctrl+/
